[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
addopts = "-W error"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
)/
'''

[tool.flake8]
#max-line-length = 88
#select = "C,E,F,W,B,B950"
#extend-ignore = "E501, E203"
#exclude = ".git,__pycache__,docs/conf.py,methcomp/__init__.py"


[[tool.mypy]]
ignore_missing_imports = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
